# ezlogs-cli

./: .ocamlformat  README.md  dune  dune-project  ecs.opam  elastic-apm.opam  ezlogs-cli-lwt.opam  ezlogs-cli.opam
.github/workflows/: main.yml
ecs/: dune  ecs.ml  ecs.mli
elastic-apm/: dune  elastic_apm.mli
lwt/: ezlogs_cli_lwt.ml
src/: dune  ecs.ml  ecs.mli  ezlogs_cli.ml  ezlogs_cli.mli
src_lwt/: dune  ezlogs_cli_lwt.ml  ezlogs_cli_lwt.mli
